# ArtificialBrain

./: .gitignore  CMakeCache.txt  CmakeConfigCreate.cmd  Copy_of_osy_utility.ipynb  README.md  deleteCoverageFiles.cmd  docker-compose.yml
ArtificialBrain/: ArtificialBrain.sln
ArtificialBrain/TernarLogicTest/: UnitTest1.cs
ArtificialBrain/TernaryLogic/: Pebble.cs  TBit.cs  TPerceptron.cs
ArtificialBrain/TernaryLogic/Manager/: ILayer.cs  IRemember.cs  Orcestrator.cs
ArtificialBrain/TernaryLogicTest/: PebbleTests.cs  PileTests.cs  TBitTest.cs  TernaryLogicTest.csproj
ArtificialBrain/TestResults/0b2e1c8c-1b28-4e4c-aac5-0fca677509f6/: zsolt_OSYPC 2020-02-20 13_23_20.coverage
ArtificialBrain/TestResults/2331d922-042b-45b9-93a9-9fa0a30f64db/: zsolt_OSYPC 2020-02-21 13_31_51.coverage
ArtificialBrain/TestResults/2613af50-7d8c-4485-a34d-1b6454a8e2af/: zsolt_OSYPC 2020-02-14 07_11_39.coverage
ArtificialBrain/TestResults/36b26095-d012-4dc0-b344-acb948f373cc/: zsolt_OSYPC 2020-02-11 09_30_48.coverage
ArtificialBrain/TestResults/72c43567-1a70-4da1-998d-e8014775fd65/: zsolt_OSYPC 2020-02-21 09_32_47.coverage
ArtificialBrain/TestResults/734fd782-d627-4531-9fe8-bf33710070bd/: zsolt_OSYPC 2020-02-14 09_14_05.coverage
ArtificialBrain/TestResults/795cf611-171c-4231-aebb-26fc858dcfda/: zsolt_OSYPC 2020-02-20 13_27_24.coverage
ArtificialBrain/TestResults/9d24683f-1a8f-4824-a5cb-080b9c6f2b14/: zsolt_OSYPC 2020-02-14 09_06_04.coverage
ArtificialBrain/TestResults/9dea6f13-b063-4a0a-a45b-17352894ea8d/: zsolt_OSYPC 2020-02-11 12_21_01.coverage
ArtificialBrain/TestResults/9e5fdfe3-a5b6-4b75-86b3-c67b1cb0781e/: zsolt_OSYPC 2020-02-10 14_26_29.coverage
ArtificialBrain/TestResults/9eaf0a77-1b26-452c-bbf7-afe73956d9d3/: zsolt_OSYPC 2020-02-10 14_18_42.coverage
ArtificialBrain/TestResults/a062801d-d22c-43ff-89ee-ede273604b99/: zsolt_OSYPC 2020-02-11 09_23_45.coverage
ArtificialBrain/TestResults/a4b07f55-5184-4999-8bb2-2f2abc8635c2/: zsolt_OSYPC 2020-02-10 15_28_42.coverage
ArtificialBrain/TestResults/b8cf0657-0273-4620-9f64-a929f042cc70/: zsolt_OSYPC 2020-02-14 09_11_37.coverage
ArtificialBrain/TestResults/b9bede91-651e-4e0f-a079-006319161a52/: zsolt_OSYPC 2020-02-21 13_26_44.coverage
ArtificialBrain/TestResults/caed0ca3-3e97-4656-a52e-f84f5be325cd/: zsolt_OSYPC 2020-02-21 09_39_19.coverage
ArtificialBrain/TestResults/cec7f705-7993-4ade-a020-eae8ae65e53f/: zsolt_OSYPC 2020-02-20 13_26_35.coverage
ArtificialBrain/TestResults/cf5dfa50-234a-477d-bcde-2dcca22bdbe8/: zsolt_OSYPC 2020-02-14 09_10_14.coverage
ArtificialBrain/TestResults/d3ff7cc3-972d-45bc-800b-c2fcb4171692/: zsolt_OSYPC 2020-02-21 09_56_34.coverage
ArtificialBrain/TestResults/dc3a5143-8bda-4ee3-a54a-699592dff5f5/: zsolt_OSYPC 2020-02-20 15_13_47.coverage
ArtificialBrain/TrinaryLogicTest/: PebbleTests.cs  PileTests.cs  TBitTest.cs  TrinaryLogicTest.csproj
CppPrototype/: AbstarctContainer_test.cpp  CMakeLists.txt  deleteCoverageFiles.cmd
CppPrototype/.vscode.msys/: launch.json  settings.json
CppPrototype/.vscode.ubuntu/: settings.json
CppPrototype/.vscode.vcpkg/: settings.json
CppPrototype/Eclipse/: eclipseInit.txt
CppPrototype/TernaryLogic/: AbstractContainer.h  AbstractNeuron.cpp  AbstractNeuron.h  Arbitrator.cpp  Arbitrator.h  CMakeLists.txt  Container.cpp  Container.h  Layer.cpp  Layer.h  Node.cpp  Node.h  Pebble.cpp  Pebble.h  Perceptron.cpp  Perceptron.h  RootNode.cpp  RootNode.h  Serializable.h  Tbit.cpp  Tbit.h  TernaryLogic  TernaryLogic.cpp  abstractNeuron.h  arbitrator.cpp  arbitrator.h  node.cpp  node.h  perceptron.cpp  perceptron.h  ternaryPerceptron.cpp  ternaryPerceptron.h
CppPrototype/TernaryLogic/TernaryBit/: TernaryBit.cpp  TernaryBit.h
CppPrototype/TernaryLogic/test/: CMakeLists.txt  TbitTest.cpp
CppPrototype/lib/googletest-distribution/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
CppPrototype/test/: AbstarctContainer_test.cpp  AbstractNeuron_test.cpp  Arbitrator_test.cpp  CMakeLists.txt  Node_test.cpp  Pebble_test.cpp  Perceptron_test.cpp  TbitTest.cpp  arbitrator_test.cpp  boostTest.cpp  container_test.cpp  layer_test.cpp  main.cpp  node_test.cpp  perceptron_test.cpp  tbit_test.cpp  ternaryPerceptron_test.cpp
CppPrototype2/: CMakeLists.txt  main.cpp
CppPrototype2/Ternary/: CMakeLists.txt  Pebble.cpp  Pebble.hpp  PebbleStatistical.cpp  PebbleStatistical.hpp  Perceptron.hpp  TernaryBit.cpp  TernaryBit.hpp
docker/: Dockerfile  compose.sh  docker-compose.yml
(+27 files in other folders)
